changing font style and background style

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ src="https://www.youtube.com/embed/yaWI4yQ8Xm8">
       <button class="button5" onclick="window.open('https://www.google.com/search?q=fortnite+images&rlz=1CASMAI_enUS779US779&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi0wfyR6qrfAhXDHzQIHTl-DuEQ_AUIDigB&biw=1310&bih=697&safe=active&ssui=on')">Fortnite images</button>
 <style>/* Styling for the body */
 body {
-  background-color: aliceblue;
-  font-family: Arial, sans-serif;
+  background-color: lightblue;
+  font-family: Monospace;
 }
 
 /* Styling for all the buttons */
