--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ background-image: url(images/my_image.jpg);
 
 <body id="page_body">
 
-<script>
+<div align="center"><script>
 function changeBGImage(whichImage){
      document.getElementById('page_body').className="bg"+whichImage;
      }
@@ -261,5 +261,5 @@ button {
   transition: all 0.4s;
     box-shadow: 0 0 1px 5px rgba(221, 159, 222, 0.39), 0 0 1px 10px rgba(138, 59, 88, 0.1);</style></div>
 }
-
+</div>
 
