--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <div align="center"><html>This is an unofical Fortnite website.</html>            
-    <title>EJPJ Fortntite News (Season All season Edition) </title>
+    <title>EJPJ Fortntite News (Seasons 6 and up Edition) </title>
   <srcipt type="main js">
     <h1>EJPJ website Fortnite website</h1>
-  <p>welcome to the EJPJ website! This is a good place to find fortnite news! the latest news is that the gifting system needs you to enable 2FA and then when you do it you get the boogie down emote but the gifting dissapers! this has happended to me. other news is that the amazing season 7 is coming soon! the release date is december 5 thursday! there are only a few days left of the season! Finish your battle bass now before it's to late! </p>
+  <p>Welcome to the EJPJ website! This is a good place to find fortnite news! the latest news is that the gifting system needs you to enable 2FA and then when you do it you get the boogie down emote but the gifting dissapers! this has happended to me. other news is that the amazing season 7 is coming soon! the release date is december 5 thursday! there are only a few days left of the season! Finish your battle bass now before it's to late! </p>
 
 <script type="//text/javascript"</script>
 
