--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ src="https://www.youtube.com/embed/yKB3c8EwXrE">
 </div>
 <p>It is now 12/13/18! Guess what is being released for free now in fortnite? Creative is now free! you can play it when ever you want! Just image your amazing inventory with golden scars and every thing! Now we can do that in fortnite! wish you could fly? Now you can! Now there are a ton of things you can now do!!</p>
 
-<p>So if you now are playing creative you don't need all of those pictures so now you are fine.</p>
-<p>This is a video from Fortnite about creative.</p>
+<p align="center">So if you now are playing creative you don't need all of those pictures so now you are fine.</p>
+<p align="center">This is a video from Fortnite about creative.</p>
 <div align="center"><iframe width="420" height="315"
 src="https://www.youtube.com/embed/yaWI4yQ8Xm8">
     </iframe></div>
