Fix typo in title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<div align="center"><html>This is an unofical Fortnite website.</html>            
+<div align="center"><html>This is an unofficial Fortnite website.</html>            
     <title>EJPJ Fortntite News (Seasons 6 and up Edition) </title>
   <srcipt type="main js">
     <h1>EJPJ website Fortnite website</h1>
